# ZkTony

./: .gitignore  README.md  deploy.sh
.github/workflows/: App.yml  Grpc.yml  Manager.yml  ZkTony-API.yml  ZkTony-Api.yml  ZkTony-App.yml  ZkTony-Compose.yml  ZkTony-FY.yml  ZkTony-Grpc.yml  ZkTony-LIQUID.yml  ZkTony-Liquid.yml  ZkTony-Manager.yml  ZkTony-TEST.yml  ZkTony-WEB.yml  ZkTony-ZM.yml
Android/App/: gradle.properties  settings.gradle.kts
Android/App_Incubation/: settings.gradle.kts
Android/App_JiXiangAn/: README.md  build.gradle.kts  settings.gradle.kts
Android/App_Liquid/: settings.gradle.kts
Android/App_Liquid_SJK/: REAMME.md
Android/App_Mix_Manual/: settings.gradle.kts
Android/App_New/: build.gradle.kts  gradle.properties  settings.gradle.kts
Android/App_YanZiJi/: README.md  build.gradle.kts  settings.gradle.kts
Android/Manager/: build.gradle.kts  settings.gradle.kts
C#/Exposure/: Exposure.sln
Desktop/ProtocolHelper/: build.gradle.kts  settings.gradle.kts
Rust/App/: Cargo.toml  Dockerfile
Rust/App/api/: Cargo.toml
Rust/App/api/src/: health.rs  lib.rs  service.rs
Rust/App/config/: Cargo.toml
Rust/App/config/src/: config.rs  lib.rs
Rust/App/db/: Cargo.toml
Rust/App/db/src/: query.rs
Rust/App/entity/src/: form.rs  lib.rs  log_detail.rs  prelude.rs  program.rs
Rust/App/env/: env.toml
Rust/App/protobuf/: Cargo.toml
Rust/App/protobuf/proto/: log_detail.proto  test.proto
Rust/App/protobuf/src/: ext.rs  lib.rs
Rust/App/src/: main.rs
Rust/Manager/: Cargo.toml  Dockerfile
Rust/Manager/api/: Cargo.toml  build.rs
Rust/Manager/api/src/: config.rs  lib.rs  service.rs
Rust/Manager/config/: config.toml
Rust/Manager/core/src/: mutation.rs  query.rs
Rust/Manager/entity/src/: form.rs  instrument.rs  lib.rs  order.rs
Rust/Manager/src/: main.rs
Web-Api/: Dockerfile  build.gradle  settings.gradle
ZkTony-API/: .gitignore  Cargo.toml  Dockerfile  config.toml
ZkTony-API/api/: Cargo.toml
ZkTony-API/api/src/: lib.rs  route.rs
ZkTony-API/api/src/system/: application.rs  log.rs  log_data.rs  log_detail.rs  mod.rs  version.rs
ZkTony-API/config/: config.toml
ZkTony-API/config/cert/: cert.pem  key.pem
ZkTony-API/configs/: Cargo.toml
ZkTony-API/configs/src/: cfgs.rs  get_config.rs  lib.rs
ZkTony-API/db/: Cargo.toml
ZkTony-API/db/src/: db.rs  lib.rs
ZkTony-API/db/src/common/: res.rs
ZkTony-API/db/src/system/: prelude.rs
ZkTony-API/db/src/system/entities/: log.rs  log_data.rs  version.rs
ZkTony-API/db/src/system/models/: log.rs  log_data.rs  mod.rs  program.rs  version.rs
ZkTony-API/metrics/: Cargo.toml
ZkTony-API/metrics/src/: router.rs
ZkTony-API/metrics/src/system/: metrics.rs
ZkTony-API/service/: Cargo.toml
ZkTony-API/service/src/system/: log.rs  log_data.rs  version.rs
ZkTony-API/src/: lib.rs  main.rs  res.rs  router.rs
ZkTony-API/src/entity/: category.rs  mod.rs  version.rs
ZkTony-API/src/handler/: mod.rs  version.rs
ZkTony-API/utils/: Cargo.toml
ZkTony-API/utils/src/: my_env.rs
ZkTony-Api/: .env  .gitignore  Cargo.toml  Dockerfile
ZkTony-Api/api/: Cargo.toml
ZkTony-Api/api/src/: handler.rs  lib.rs  route.rs  router.rs  state.rs
ZkTony-Api/api/src/app/: application.rs
ZkTony-Api/api/src/log/: log.rs  log_detail.rs  program.rs
ZkTony-Api/api/src/manager/: customer.rs  equipment.rs  product.rs  software.rs
ZkTony-Api/api/src/system/: customer.rs  equipment.rs  index.rs  mod.rs  product.rs  program.rs  shipping.rs  software.rs
ZkTony-Api/common/: Cargo.toml
ZkTony-Api/common/src/: error.rs
ZkTony-Api/config/: config.toml
ZkTony-Api/configs/src/: cfgs.rs
ZkTony-Api/core/: Cargo.toml
ZkTony-Api/core/src/: form.rs  lib.rs  mutation.rs  query.rs
ZkTony-Api/database/: Cargo.toml
ZkTony-Api/database/src/: lib.rs
ZkTony-Api/database/src/entities/: mod.rs  prelude.rs
ZkTony-Api/database/src/entities/log/: mod.rs
ZkTony-Api/database/src/entities/manager/: equipment.rs  product.rs
ZkTony-Api/database/src/models/: mod.rs
ZkTony-Api/database/src/models/app/: application.rs
ZkTony-Api/database/src/models/manager/: customer.rs  equipment.rs  mod.rs  product.rs  software.rs
ZkTony-Api/db/src/system/: mod.rs  prelude.rs
ZkTony-Api/db/src/system/entities/: customer.rs  log.rs  mod.rs  product.rs  shipping.rs  software.rs
ZkTony-Api/db/src/system/models/: customer.rs  log.rs  log_detail.rs  product.rs  shipping.rs  software.rs
ZkTony-Api/entity/: Cargo.toml
ZkTony-Api/entity/src/: lib.rs  software.rs
ZkTony-Api/metrics/src/: handler.rs  layer.rs  lib.rs  router.rs
ZkTony-Api/service/: Cargo.toml
ZkTony-Api/service/src/app/: application.rs
ZkTony-Api/service/src/log/: log.rs  log_detail.rs  program.rs
ZkTony-Api/service/src/manager/: customer.rs  equipment.rs  product.rs  software.rs
ZkTony-Api/service/src/system/: application.rs  customer.rs  equipment.rs  log.rs  log_detail.rs  mod.rs  product.rs  program.rs  shipping.rs  software.rs
ZkTony-Api/src/: main.rs
ZkTony-Api/utils/src/: lib.rs
ZkTony-App/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
ZkTony-Compose/: README.md  build.gradle.kts
ZkTony-FY/: README.md  build.gradle.kts  settings.gradle.kts
ZkTony-Grpc/: .env  Cargo.toml  Dockerfile
ZkTony-Grpc/api/: Cargo.toml  build.rs
ZkTony-Grpc/api/proto/: log_detail.proto
ZkTony-Grpc/api/src/: config.rs  health.rs  lib.rs  protobuf.rs  service.rs
ZkTony-Grpc/config/: config.toml
ZkTony-Grpc/core/src/: mutation.rs  query.rs
ZkTony-Grpc/entity/src/: application.rs  log_detail.rs
ZkTony-Grpc/src/: main.rs
ZkTony-LIQUID/: README.md  build.gradle.kts  settings.gradle.kts
ZkTony-Liquid/: README.md  build.gradle.kts  settings.gradle.kts
ZkTony-Manager/: build.gradle.kts  gradle.properties  settings.gradle.kts
ZkTony-TEST/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  zktony.keystore
ZkTony-WEB/: Dockerfile  build.gradle.kts  settings.gradle.kts
ZkTony-Web/: build.gradle.kts
ZkTony-ZM/: build.gradle.kts  settings.gradle.kts
scripts/: zktony.sh
(+5406 files in other folders)
