[package]
edition = "2021"
name = "zktony-api"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.11"
axum = "0.6.4"
chrono = "0.4"
config = "0.13"
dotenv = "0.15"
mime = "0.3.16"
sea-orm = {version = "0.11.0", features = ["runtime-tokio-native-tls", "sqlx-postgres", "debug-print"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = {version = "1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.3"
