[workspace]
members = [
  "bin",
  "api",
  "service",
  "configs",
  "utils",
  "db",
]

[workspace.package]
authors = ["zktony <15252114322@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
# axum 
axum = "0.6.4"
axum-extra = "0.4.2"
axum-server = "0.4.4"
hyper = "0.14.24"
mime = "0.3.16"
#
anyhow = "1.0.69"
chrono = "0.4.23"
once_cell = "1.17.0"
serde = "1.0.152"
serde_json = "1.0.93"
tokio = "1.25.0"
toml = "0.7.2"
# tracing
time = "0.3.17"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.16"

# 系统信息
sysinfo = "0.27.7"

# sea-orm
sea-orm = "0.11.0"
