[workspace]
members = [
  "bin",
  "api",
  "service",
  "configs",
  "utils",
  "db",
]

[workspace.package]
authors = ["zktony <15252114322@163.com>"]
description = "Zktony's API"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
# axum 
axum = "0.6"
axum-extra = "0.4"
axum-server = "0.4"
hyper = "0.14"
mime = "0.3"
#
anyhow = "1"
chrono = "0.4"
once_cell = "1"
serde = "1"
serde_json = "1"
tokio = "1"
toml = "0.7"
# tracing
time = "0.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-log = "0.1"
tracing-subscriber = "0.3"

# 系统信息
sysinfo = "0.27"

# sea-orm
sea-orm = "0.11"
