[workspace]
members = [
  "api",
  "bin",
  "common",
  "configs",
  "database",
  "metrics",
  "service",
  "utils",
]

[workspace.package]
authors = ["zktony <15252114322@163.com>"]
description = "Zktony API Server for Rust"
edition = "2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
# axum 
axum = "0.6"
axum-extra = "0.5"
axum-server = "0.4"
hyper = "0.14"
mime = "0.3"
tower = "0.4"
tower-http = "0.3"
#
anyhow = "1"
chrono = "0.4"
once_cell = "1"
serde = "1"
serde_json = "1"
tokio = "1"
toml = "0.7"
# tracing
time = "0.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-log = "0.1"
tracing-subscriber = "0.3"
# metrics
metrics = "0.20"
metrics-exporter-prometheus = "0.11"
metrics-util = "0.14"

# sea-orm
sea-orm = "0.11"
