[package]
authors = ["刘贺贺 <15252114322@163.com>"]
edition = "2021"
name = "zktony-api"
publish = false
version = "0.1.0"

[workspace]
members = [".", "api", "core", "entity"]

[dependencies]
actix-web = "4"
dotenvy = "0.15"
serde = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
api = { path = "api" }
