[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = {path = "../db"}
service = {path = "../service"}
# 
axum = {workspace = true, default-features =false, features = ["multipart"]}