[package]
edition = "2021"
name = "metrics"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configs = {path = "../configs"}

axum = {workspace = true, default-features = false}
metrics = {workspace = true, default-features = false}
metrics-exporter-prometheus = {workspace = true, default-features = false}
metrics-util = {workspace = true, default-features = false}
