[package]
edition = "2021"
name = "api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
database = {path = "../database"}
service = {path = "../service"}
# 
axum = {workspace = true, default-features = false, features = ["multipart"]}
