[package]
name = "zktony_api"
version = "0.1.0"
authors = ["刘贺贺 <15252114322@163.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zktony_core = { path = "../core" }
entity = { path = "../entity" }
actix-web = "4"
serde = "1"