[package]
edition = "2021"
name = "core"
version = "0.1.0"
publish = false

[lib]
name = "core"
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
entity = { path = "../entity" }
sea-orm = { version = "0.11", features = [
    "sqlx-postgres",
    "runtime-actix-native-tls",
    "macros",
] }
serde = { version = "1", features = ["derive"] }
