[package]
name = "grpc-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = "0.4"
dotenvy = "0.15"
grpc-core = { path = "../core" }
tonic = "0.8"
tonic-health = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "full"] }
tracing = "0.1"
entity = { path = "../entity" }
prost = "0.11"
serde = "1"

[lib]
path = "./src/lib.rs"

[build-dependencies]
tonic-build = "0.8"
