[package]
name = "grpc-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = "0.4"
grpc-core = { path = "../core" }
tonic = { version = "0.9", features = ["gzip"] }
tonic-health = "0.9"
tonic-types = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "full"] }
tracing = "0.1"
entity = { path = "../entity" }
prost = "0.11"
toml = "0.7"
once_cell = "1"
serde = { version = "1", features = ["derive"] }

[lib]
path = "./src/lib.rs"

[build-dependencies]
tonic-build = "0.9"
