[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
db = { path = "../db" }
config = { path = "../config" }
protobuf = { path = "../protobuf" }
tonic = { version = "0.9", features = ["gzip", "tls"] }
tonic-health = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "full"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }

[lib]
path = "./src/lib.rs"
